# turAIn

./: .env  .gitignore  NeuralNetwork.py  README.md  pyproject.toml
demo/: binary_cross_entropy.py  data_augmentation.py  example_demo.py  mean_squared_error.py  optimizers.py
forge/: BinaryClassifier.py  MultiClassClassifier.py
model_forges/: BinaryClassifier.py  MultiClassClassifier.py
models/: test_model.pkl  test_model.pkl.mt
src/main/resources/config/: requirements-dev.txt  requirements.txt
src/main/turain/: __init__.py
src/main/turain/backend/: __init__.py  backend.py  cpu.py  cupy_backend.py  gpu.py  numpy_backend.py
src/main/turain/core/: module.py
src/main/turain/data/: __init__.py  batch_loader.py  data_augmentation.py  dataset_manager.py  dataset_preparer.py  deserialization.py  encoding.py  model_io.py  serialization.py
src/main/turain/lib/: __init__.py  libs.py
src/main/turain/metrics/: confusion_matrix.py  error_analysis.py  meta.py  metrics.py  model_inspector.py  model_summary.py  prediction_logger.py
src/main/turain/models/: model_factory.py  model_forgery.py  sequential.py
src/main/turain/neural_network/: __init__.py
src/main/turain/neural_network/activations/: __init__.py  activation.py  hiperbolic_tangent.py  leaky_relu.py  relu.py  sigmoid.py  softmax.py
src/main/turain/optimizers/: __init__.py  adam.py  momentum.py  optimizer.py  rms_prop.py  stochastic_gradient_descent.py
src/main/turain/runtime/: __init__.py  backend_selector.py
src/main/turain/train/: __init__.py  early_stopping.py  evaluator.py  finalizer.py  logger.py  plotter.py  state_tracker.py  train.py
src/main/turain/utilities/: __init__.py  annotation.py  config.py  constant.py  converter.py  encoding.py  enum.py  extension.py  guard.py  path.py
src/turAIn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: activations.py  bias_initializer.py  binary_cross_entropy.py  data_augmentation.py  evaluator.py  finalizer.py  fused_softmax.py  gpu_sequential.py  linear.py  mean_squared_error.py  model_io.py  model_io_test.py  optimizers.py  test.py  training.py
(+63 files in other folders)
