[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turAIn"
version = "0.1.0"
description = "A Machine Learning Library"
requires-python = ">=3.10"
dependencies = [
    "numpy>-=1.26",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]